idf_component_register(SRCS "hello_world_main.c"
                    "rtthread/src/components.c"
                    "rtthread/src/scheduler.c"
                    "rtthread/src/device.c"
                    "rtthread/src/clock.c"
                    "rtthread/src/irq.c"
                    "rtthread/src/thread.c"
                    "rtthread/src/mempool.c"
                    "rtthread/src/ipc.c"
                    "rtthread/src/mem.c"
                    "rtthread/src/object.c"
                    "rtthread/src/idle.c"
                    "rtthread/src/timer.c"
                    "rtthread/src/kservice.c"
                    INCLUDE_DIRS ".")
